--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "messenger-webhook",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "messenger-quick-start",
+  "version": "2.0.0",
+  "description": "An example webhook for Facebook Messenger quick start tutorial.",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "hello"
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "request": "^2.88.0"
   },
   "engines": {
-    "node": "16.13.0"
+    "node": ">=10.x"
   },
-  "author": "",
+  "repository": {
+    "url": "https://github.com/fbsamples/messenger-platform-samples"
+  },
+  "author": "Facebook",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
-  }
+  "keywords": [
+    "messenger",
+    "webhook"
+  ]
 }
